[gd_scene load_steps=6 format=3 uid="uid://c8v3csej56ufk"]

[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_2dx2y"]
[ext_resource type="PackedScene" uid="uid://bslhrv3eo36wd" path="res://scenes/lobby.tscn" id="2_fk1bs"]
[ext_resource type="Texture2D" uid="uid://bg22w0mcbpuvi" path="res://owo.jpg" id="3_e4py3"]

[sub_resource type="Theme" id="Theme_bqtx0"]

[sub_resource type="Theme" id="Theme_xctbh"]
MarginContainer/constants/margin_bottom = 12
MarginContainer/constants/margin_left = 12
MarginContainer/constants/margin_right = 12
MarginContainer/constants/margin_top = 12

[node name="MainMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_bqtx0")
script = ExtResource("1_2dx2y")
lobby_scene = ExtResource("2_fk1bs")

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(256, 150)
layout_mode = 2
texture = ExtResource("3_e4py3")
expand_mode = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme = SubResource("Theme_xctbh")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Nombre" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"BigLabel"
theme_override_colors/font_color = Color(0.356863, 0.607843, 0.309804, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "DinoPark"
horizontal_alignment = 1

[node name="Play" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Credits" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits
"

[node name="Settings" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Exit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Play" to="." method="_on_start_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
